# Chess_Game

./: .gitignore  README.md
Chess/: CMakeLists.txt
Chess/include/: Bishop.h  Blank.h  Color.h  Controller.h  Coordinate.h  Encode.h  King.h  Knight.h  MetaData.h  Pawn.h  Piece.h  PieceFactory.h  PolyMatrix.h  Queen.h  Rook.h
Chess/src/: Bishop.cpp  Blank.cpp  CMakeLists.txt  Controller.cpp  King.cpp  Knight.cpp  Pawn.cpp  Piece.cpp  PolyMatrix.cpp  Queen.cpp  Rook.cpp  main.cpp
